# Chess

./: .gitignore  .missing-moves.swp  =  Cargo.toml  README.md  check_differences.py  missing-moves  missing_moves  perf.data.old
benches/: my_benchmark.rs
src/: bitboard.rs  board.rs  lib.rs  main.rs  missing_moves  search.rs
src/bitboard/: bitboard_operations.rs  consts.rs  macros.rs  mod.rs  pieces.rs  tests.rs
src/bitboard/move_generation/: mod.rs  pieces.rs
