[package]
name = "chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name="my_benchmark"
harness=false

[dependencies]
ahash = "0.8.3"
bitvec = "1.0.1"
fnv = "1.0.7"
itertools = "0.10.5"

