[package]
name = "chess"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name="my_benchmark"
harness=false

[profile.release]
lto=true
codegen-units=1
#debug=true

[dependencies]
chashmap = "2.2.2"

